#525 UT and Sonar